# gtk-proj

./: CMakeLists.txt
src/: main.cpp
